feat: Added metadata, open graph and security, Microsoft Tile and comments. Replaced the title

--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset='utf-8'>
-	<meta name='viewport' content='width=device-width,initial-scale=1'>
+<html lang="pt-BR">
+  <head>
+    <!-- ===== TÍTULO e METADADOS ===== -->
+    <title>Calculadora Svelte</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width,maximum-scale=0.9,user-scalable=0"
+    />
+    <meta name="keywords" content="Calculadora Svelte" />
+    <meta name="Author" content="Alan Ryan da Silva Domingues" />
+    <meta content="#222" name="theme-color" />
+    <meta name="robots" content="index, follow" />
+    <!-- ==== OPEN GRAPH e SEGURANÇA ==== -->
+    <meta property="og:title" content="Calculadora Svelte" />
+    <meta property="og:image" content="../readme_assets/pagina-principal.png" />
+    <meta property="og:type" content="website" />
+    <meta http-equiv="X-Content-Type-Options" content="nosniff" />
+    <meta http-equiv="X-Frame-Options" content="DENY" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- ==== MICROSOFT TILE ==== -->
+    <meta name="application-name" content="Calculadora Svelte" />
+    <meta name="msapplication-TileColor" content="#FFFFFF" />
+    <!-- ==== CSS, SCRIPT and FAVICON ==== -->
+    <link rel="stylesheet" href="/global.css" />
+    <link rel="stylesheet" href="/build/bundle.css" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <script defer src="/build/bundle.js"></script>
+  </head>
 
-	<title>Svelte app</title>
-
-	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link rel='stylesheet' href='/global.css'>
-	<link rel='stylesheet' href='/build/bundle.css'>
-
-	<script defer src='/build/bundle.js'></script>
-</head>
-
-<body>
-</body>
+  <body></body>
 </html>
